[project]
name = "behavetest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "behave>=1.2.6",
]

[[tool.mypy.overrides]]
module = [
    "allure",
    "behave.*",
    "requests_auth_aws_sigv4",
]
ignore_missing_imports = true
